# Semestr_4

./: .gitignore  LICENSE
Сис. Прог/Lab 2/task 1/: CMakeLists.txt  logger.h  main.cpp
Сис. Прог/Lab 2/task 2/: CMakeLists.txt  analyzer.cpp  analyzer.h  generator.cpp  generator.hpp  ip_st.h  loger.cpp  loger.h  main.cpp  ts_queue.hpp  utils.h
Сис. Прог/Laba 1/server/: CMakeLists.txt  main.c
Сис. Прог/Laba 1/task 1/: errors.c  errors.h
Сис. Прог/Laba 1/task 2/: CMakeLists.txt  client.c  client.h  server.c
Сис. Прог/Laba 1/task 6/: client.c  client.h  server.c  server_utility.c  server_utility.h  utility.c  utility.h
Фунды/Lab 1/number 1/: CMakeCache.txt  cmake_install.cmake
Фунды/Lab 1/number 1/include/: functions.hpp
Фунды/Lab 1/number 1/tests/: tests.cpp
Фунды/Lab 1/number 2/: CMakeCache.txt  Makefile  cmake_install.cmake  number_2.cbp
Фунды/Lab 1/number 2/.cmake/api/v1/reply/: cache-v2-1c1ef9a1d0560dfa1e98.json  cmakeFiles-v1-4648457b2e66cf0b5cb7.json  codemodel-v2-8b7b6e3c7c341e0be270.json  directory-googletest.googlemock-Debug-8a9e3624005bdc2b059d.json  directory-googletest.googletest-Debug-9ebf07eee5a1d9abaf74.json  index-2025-04-10T15-06-51-0373.json  target-cppcheck-Debug-c37158758acb6899f1e2.json  target-gmock-Debug-be544cbc3f6a588d9be6.json  target-gmock_main-Debug-c1bc57169a575c84d3c4.json  target-gtest-Debug-5e685d3aff03a28ad83e.json  target-gtest_main-Debug-9cb824eba8509c4264da.json  target-number_2-Debug-6c45f704899be5bdb71a.json  target-tests-Debug-eb3e2a870b111dbba916.json
Фунды/Lab 1/number 2/include/: functions.h
Фунды/Lab 1/number 2/src/: functions.cpp
Фунды/Lab 1/number 2/tests/: tests.cpp
Фунды/Lab 1/number 3/: CMakeCache.txt  Makefile  cmake_install.cmake  number_1.cbp  number_2  number_3.cbp
Фунды/Lab 1/number 3/.cmake/api/v1/reply/: cache-v2-8e35c61b5ec75df3d08e.json  cmakeFiles-v1-3406e1a9063913bd6332.json  codemodel-v2-2b89cb861e5d8749f10a.json  index-2025-04-04T18-36-08-0434.json  target-cppcheck-Debug-f96169cda5d3ffd9c5e5.json  target-gmock-Debug-9c2052f708d6eb0532d1.json  target-gmock_main-Debug-a61116b4aff18e82d95e.json  (+4 more)
Фунды/Lab 2/number 1/: CMakeLists.txt
Фунды/Lab 2/number 1/include/: bigint.hpp
Фунды/Lab 2/number 1/src/: functions.cpp
Фунды/Lab 2/number 1/tests/: tests.cpp
Фунды/number 1/: CMakeLists.txt  Makefile
Фунды/number 1/include/: functions.h
Фунды/number 1/src/: functions.cpp
Фунды/number 1/tests/: tests.cpp
Фунды/number 3/include/: functions.h  list.h
Фунды/number 3/src/: functions.cpp
Фунды/number 3/tests/: tests.cpp
Фунды/task 1 new/: CMakeLists.txt
Фунды/task 1 new/include/: functions.h  functions.hpp
Фунды/task 1 new/src/: functions.cpp  main.cpp
